--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 		I don't understand why some people like to cause problems, do you? </P>
 	</body>
 </html>
-<h1> so it all started when i was entering high school. my best friend stopped being my best friend 
+<h1> so it all started when I was entering high school. my best friend stopped being my best friend 
 and became a stranger. she changed soo soo much! it was unbelievable </h1>
 <h2> her name is Nyasha. we were inseparable. but she just changed too fast on me </h3>
 <h3> my other best friend was chisom. she still the same so im always happy to she her. 
 shes always happy, therefore its always a blessing to see her around </h3>
-<h4> moving on, i cant wait to  graduate. its a blessing to thing back and realize i havent
+<h4> moving on, i cant wait to  graduate. its a blessing to thing back and realize I haven't
 done too bad </h4>
 <h4> june 12 will be memorable. the day i can put all the bad in the past and look forward to a better 
 beginning. hope college is full of excitement and wonderful journeys </h4>
 <h5> I plan  on majoring on social work and change the life of many troubled children. i want to
 change the life of those who more need it!! </h5>
-<h6>i dont need to be rich but i do want to life comfortable. its important to me because 
-i feel like rich people arent always happy depsite all the money thy appear to have. 
-<p> life is too short to not be happy or to have to deal with unnecessary shit.  
+<h6>I don't need to be rich but i do want to life comfortable. its important to me because 
+I feel like rich people arent always happy depsite all the money thy appear to have. 
+<p> life is too short to not be happy or to have to deal with unnecessary shit, wouldn't </p>
+<p> treat people how you want to be treated should be everyone's motto! if you want respect you look for
+ it and you earn it by also giving it </p>
+ <p> <b> <i> GABRIELA. </b> <i>
+ <p> <b> <i> Peace. <b/> </i>
+ <p> <b> <i> Love. </b> </i>
+ <p> <b> <i> Respect. </b>  </i>
