--- a/index.html
+++ b/index.html
@@ -28,3 +28,4 @@ I feel like rich people arent always happy depsite all the money thy appear to h
  <p> <b> <i> Peace. <b/> </i>
  <p> <b> <i> Love. </b> </i>
  <p> <b> <i> Respect. </b>  </i>
+ <img src="images/waterfall.jpg">
