--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<title> my life. </title>
+		
+		<link href="css/style.css" type="text/css" rel="stylesheet">
+		
 	</head>
 	<body> 
 		<h1> hello my name is Gabriela and I am eighteen years old. </h1>
@@ -13,11 +16,12 @@ and became a stranger. she changed soo soo much! it was unbelievable </h1>
 <h2> her name is Nyasha. we were inseparable. but she just changed too fast on me </h3>
 <h3> my other best friend was chisom. she still the same so im always happy to she her. 
 shes always happy, therefore its always a blessing to see her around </h3>
-<h4> moving on, i cant wait to  graduate. its a blessing to thing back and realize I haven't
+<h4> moving on, i cant wait to graduate. its a blessing to thing back and realize I haven't
 done too bad </h4>
 <h4> june 12 will be memorable. the day i can put all the bad in the past and look forward to a better 
 beginning. hope college is full of excitement and wonderful journeys </h4>
-<h5> I plan  on majoring on social work and change the life of many troubled children. i want to
+<h5> I plan  on majoring on social work and change the life of many troubled children <a href= ".http://www.trinitydc.edu/"
+> IMDB </a> i want to
 change the life of those who more need it!! </h5>
 <h6>I don't need to be rich but i do want to life comfortable. its important to me because 
 I feel like rich people arent always happy depsite all the money thy appear to have. 
@@ -29,3 +33,7 @@ I feel like rich people arent always happy depsite all the money thy appear to h
  <p> <b> <i> Love. </b> </i>
  <p> <b> <i> Respect. </b>  </i>
  <img src="images/waterfall.jpg">
+ 
+ 
+ 
+,
